policies/kyverno/audit/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: eventpulse-require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root Workloads
    policies.kyverno.io/category: EventPulse
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-pod-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - eventpulse
              selector:
                matchExpressions:
                  - key: app.kubernetes.io/component
                    operator: In
                    values:
                      - api
                      - migration
                      - seed
                      - test
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - kube-public
                - kube-node-lease
      validate:
        failureAction: Audit
        message: "EventPulse pods must run as non-root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - securityContext:
                  runAsNonRoot: true
