policies/kyverno/tests/resources/invalid-latest-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-latest-image
  namespace: eventpulse
  labels:
    app.kubernetes.io/name: eventpulse
    app.kubernetes.io/component: api
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: api
      image: ghcr.io/abhi002shek/eventpulse:latest
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        runAsNonRoot: true
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 512Mi
