policies/kyverno/tests/resources/invalid-missing-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-missing-resources
  namespace: eventpulse
  labels:
    app.kubernetes.io/name: eventpulse
    app.kubernetes.io/component: api
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: api
      image: ghcr.io/abhi002shek/eventpulse@sha256:76571b0ad6961c7ea7c72d9c3dc81b6014e22be2ceefb26a7157ea607b80e224
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        runAsNonRoot: true
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
