policies/kyverno/tests/resources/invalid-unapproved-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-unapproved-registry
  namespace: eventpulse
  labels:
    app.kubernetes.io/name: eventpulse
    app.kubernetes.io/component: api
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: api
      image: docker.io/library/nginx@sha256:84ec966e61a8c7846f509da7eb081c55c1d56817448728924a87ab32f12a72fb
      securityContext:
        allowPrivilegeEscalation: false
        privileged: false
        runAsNonRoot: true
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 512Mi
